feat: badge share
